# mxdev

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  CLAUDE.md  CONTRIBUTING.md  EXTENDING.md  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  PLAN_ISSUE_54.md  README.md  README.rst  RELEASE.md  include.mk  mxdev.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  mypy.yml  release.yaml  tests.yaml  tests.yml
example/: .gitignore  README.md  constraints-infile.txt  example.ini  requirements-infile.txt
src/: mxdev.py
src/mxdev/: __init__.py  config.py  entry_points.py  hooks.py  including.py  logging.py  main.py  processing.py  state.py
src/mxdev/tests/: conftest.py  fixtures.py  test_common.py  test_cvs.py  test_extension.py  test_git.py  test_git_submodules.py  test_including.py  test_mercurial.py  test_svn.py  test_vcs_filesystem.py  utils.py
src/mxdev/tests/data/: file01.ini  file02.ini  file04.ini
src/mxdev/vcs/: README.md  bazaar.py  commands.py  common.py  compat.py  cvs.py  darcs.py  develop.py  extension.py  filesystem.py  git.py  gitsvn.py  mercurial.py  svn.py
tests/: README.md  conftest.py  test_common.py  test_config.py  test_entry_points.py  test_git.py  test_git_additional.py  test_git_submodules.py  test_hooks.py  test_including.py  test_logging.py  test_main.py  test_mercurial.py  test_processing.py  test_svn.py  test_vcs_filesystem.py  utils.py
tests/data/: file01.ini  file03.ini  file_with_http_include01.ini  file_with_http_include02.ini  file_with_http_include03.ini  file_with_http_include04.ini
tests/data/config_samples/: basic_config.ini  config_deprecated_direct.ini  config_editable_mode.ini  config_fixed_mode.ini  config_invalid_mode.ini  config_no_url.ini  config_package_direct.ini  config_package_invalid_mode.ini  config_with_custom_target.ini  config_with_extras.ini  config_with_ignores.ini  config_with_overrides.ini
tests/data/requirements/: basic_requirements.txt  constraints.txt  nested_requirements.txt  requirements_with_constraints.txt
