[metadata]
version = 2.0.0
name = mxdev
description = Makes it easy to work with Python projects containing lots of packages, of which you only want to develop some.
long_description = file: README.rst, CHANGES.rst
keywords = pip
author = Jens Klein (Klein & Partner KG)
author_email = office@kleinundpartner.at
url = https://github.com/bluedynamics/mxdev
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
include_package_data = False
install_requires =
    setuptools
    libvcs>=0.10.1
py_modules =
    mxdev
zip_safe = False

[options.extras_require]
test =
    pytest
    types-setuptools

[options.entry_points]
console_scripts =
  mxdev = mxdev:main


[isort]
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[mypy]
ignore_missing_imports = True

[zest.releaser]
create-wheel = yes
