[metadata]
version = 3.0.0b1.dev0
name = mxdev
description = Enable to work with Python projects containing lots of packages, of which you only want to develop some.
long_description = file: README.rst, CHANGES.rst
keywords = pip, vcs, git, develop
author = BlueDynamics Alliance and contributors
author_email = dev@bluedynamics.com
url = https://github.com/mxstack/mxdev
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
include_package_data = False
install_requires =
    setuptools
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    types-setuptools

[options.entry_points]
console_scripts =
  mxdev = mxdev:main
mxdev.workingcopytypes =
  svn = mxdev.vcs.svn:SVNWorkingCopy
  git = mxdev.vcs.git:GitWorkingCopy
  gitsvn = mxdev.vcs.gitsvn:GitSVNWorkingCopy
  hg = mxdev.vcs.mercurial:MercurialWorkingCopy
  bzr = mxdev.vcs.bazaar:BazaarWorkingCopy
  fs = mxdev.vcs.filesystem:FilesystemWorkingCopy
  darcs = mxdev.vcs.darcs:DarcsWorkingCopy

[isort]
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[mypy]
ignore_missing_imports = True

[zest.releaser]
create-wheel = yes

[flake8]
# Excludes due to known issues or incompatibilities with black:
# BLK100: Black would make changes. https://pypi.org/project/flake8-black/
# W503: https://github.com/psf/black/search?q=W503&unscoped_q=W503
# E231: https://github.com/psf/black/issues/1202
ignore = BLK100,E231,W503,D100,D101,D102,D102,D103,D104,D105,D106,D107,D202,D205
statistics = 1
# black official is 88, but can get longer
max-line-length = 120

[bdist_wheel]
universal = 1

; [tool:pytest]
; testpaths = tests
; addopts = -vvv --cov-report term-missing --cov=cookiecutter

[doc8]
# TODO: Remove current max-line-lengh ignore in follow-up and adopt black limit.
# max-line-length = 88
ignore = D001
